--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<h1> IMPORTANT:</h1> 
-<h4>make sure the title tags are the same in your google document - each title tag will repersent a block </h4>
-<h4></h4> 
+<h1> Google Docs to Adapt</h1>
 
+
+<div class="container">
+<h3 class="important"> IMPORTANT:</h3>
+<ul>
+<li>Make sure the title tags are the same in your google document - each title tag will repersent a block</li>
+<li>Remember to change the id of the article.js file found in your exported adapt document to 'a-50'</li>
+</ul>
+</div>
 <input type="file" id="html-file-input">
 <button><a id="block" download="blocks.json">Download Adapt Blocks</a></button>
 <button><a id="component" download="components.json">Download Adapt Components</a></button>
