--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<h1> Google Docs to Adapt</h1>
+<h1>Google Docs to Adapt</h1>
 
-<input type="file" id="html-file-input">
+<input type="file" id="html-file-input" />
 <button><a id="block" download="blocks.json">Download Adapt Blocks</a></button>
-<button><a id="component" download="components.json">Download Adapt Components</a></button>
+<button>
+  <a id="component" download="components.json">Download Adapt Components</a>
+</button>
 <div class="container">
-<h3 class="important"> IMPORTANT:</h3>
-<ul>
-<li>Make sure the title tags are the same in your google document - each title tag will repersent a block</li>
-<li>Remember to change the id of the article.js file found in your exported adapt document to 'a-50'</li>
-</ul>
+  <h3 class="important">IMPORTANT:</h3>
+  <ul>
+    <li>
+      Make sure the title tags are the same in your google document - each title
+      tag will repersent a block
+    </li>
+    <li>
+      Remember to change the id of the article.js file found in your exported
+      adapt document to 'a-50'
+    </li>
+  </ul>
 </div>
+<hr />
+<h1>Unsplash Searcher</h1>
+<textarea id="searchTerms"></textarea>
+<button class="search">Search Images</button>
