--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 </div>
 <hr />
 <h1>Unsplash Searcher</h1>
+<label for="dl-results">Download number: </label><input class="dl-results" type="number"> </input>
+<label for="cropRatio">Crop Ratio:</label>
+<input type="number" id="cropRatio" value="1.0" step="0.1" min="0.1" max="1.0">
 <textarea id="searchTerms"></textarea>
 <button class="search">Search Images</button>
