--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Google Docs to Adapt</h1>
-
+<hr />
 <input type="file" id="html-file-input" />
 <button><a id="block" download="blocks.json">Download Adapt Blocks</a></button>
 <button>
@@ -18,10 +18,17 @@
     </li>
   </ul>
 </div>
-<hr />
+
 <h1>Unsplash Searcher</h1>
+<hr />
 <label for="dl-results">Download number: </label><input class="dl-results" type="number"> </input>
-<label for="cropRatio">Crop Ratio:</label>
-<input type="number" id="cropRatio" value="1.0" step="0.1" min="0.1" max="1.0">
+<label for="cropDimensions">Crop Dimensions:</label>
+<select id="cropDimensions">
+  <option value="1100x740">1100 x 740</option>
+  <option value="1100x1100">1100 x 1100</option>
+</select>
+<hr />
+<p>Narrative component: 1100 x 740  || Everything else: 1100 x 1100 </p>
+<hr />
 <textarea id="searchTerms"></textarea>
 <button class="search">Search Images</button>
