--- a/index.html
+++ b/index.html
@@ -32,3 +32,14 @@
 <hr />
 <textarea id="searchTerms"></textarea>
 <button class="search">Search Images</button>
+
+<h1> Tracking id Fixer </h1>
+<hr />
+<textarea id="insertIdBlocks"></textarea>
+<button id="trackingIdButton">Edit Tracking IDs and Copy to Clipboard'</button>
+
+<h1>Parant updater</h1>
+<hr />
+<textarea id="parentArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
+<textarea id="childArea" rows="10" cols="50" placeholder="Insert array of child objects here"></textarea>
+<button id="updateButton">Update Parent</button>
