2 files modified - name assesments based on blockt title

--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
 <h1> Tracking id Fixer </h1>
 <hr />
 <textarea id="insertIdBlocks"></textarea>
-<button id="trackingIdButton">Edit Tracking IDs and Copy to Clipboard'</button>
+<button id="trackingIdButton">Edit Tracking IDs and Copy to Clipboard</button>
 
 <h1>Parant updater</h1>
 <hr />
 <textarea id="parentArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
 <textarea id="childArea" rows="10" cols="50" placeholder="Insert array of child objects here"></textarea>
 <button id="updateButton">Update Parent</button>
+
+
+<h1>Article Assessment Namer</h1>
+<hr />
+<textarea id="parentAssementArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
+<textarea id="childBlockArea" rows="10" cols="50" placeholder="Insert array of child objects here"></textarea>
+<button id="updateArticleButton">Update Parent id with child title</button>
