--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Google Docs to Adapt</h1>
+Download a Google Docs file as an HTML and insert it below. It will convert every H2 with the accompanying. Paragraph text below into blocks and respective child components.
 <hr />
 <input type="file" id="html-file-input" />
 <button><a id="block" download="blocks.json">Download Adapt Blocks</a></button>
@@ -20,6 +21,7 @@
 </div>
 
 <h1>Unsplash Searcher</h1>
+Type in a keyword of the text area below set the size you want it to be and the number of images you want to get back a text file will accompany the downloaded images with all the attribution and referencing you need.
 <hr />
 <label for="dl-results">Download number: </label><input class="dl-results" type="number"> </input>
 <label for="cropDimensions">Crop Dimensions:</label>
@@ -34,19 +36,22 @@
 <button class="search">Search Images</button>
 
 <h1> Tracking id Fixer </h1>
+Update the tracking IDs of all the blocks in numerical order to ensure they are unique
 <hr />
 <textarea id="insertIdBlocks"></textarea>
 <button id="trackingIdButton">Edit Tracking IDs and Copy to Clipboard</button>
 
-<h1>Parant updater</h1>
+<h1>Parent updater</h1>
+Set the block title to the title of its child component and set all graphic titles to the title of its sibling with the additional 'Graphic for' at the start of the title
 <hr />
 <textarea id="parentArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
 <textarea id="childArea" rows="10" cols="50" placeholder="Insert array of child objects here"></textarea>
-<button id="updateButton">Update Parent</button>
+<button id="updateButton">Update</button>
 
 
 <h1>Article Assessment Namer</h1>
+Quickly set all of the assessment ids to the names of a the first child block it finds.
 <hr />
 <textarea id="parentAssementArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
 <textarea id="childBlockArea" rows="10" cols="50" placeholder="Insert array of child objects here"></textarea>
-<button id="updateArticleButton">Update Parent id with child title</button>
+<button id="updateArticleButton">Update</button>
