--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ Type in a keyword of the text area below set the size you want it to be and the 
 <textarea id="searchTerms"></textarea>
 <button class="search">Search Images</button>
 
-<h1> Tracking id Fixer </h1>
+<h1>Set new tracking IDs </h1>
 Update the tracking IDs of all the blocks in numerical order to ensure they are unique
 <hr />
 <textarea id="insertIdBlocks"></textarea>
-<button id="trackingIdButton">Edit Tracking IDs and Copy to Clipboard</button>
+<button id="trackingIdButton">Update</button>
 
-<h1>Parent updater</h1>
+<h1>Update Component and Block Titles</h1>
 Set the block title to the title of its child component and set all graphic titles to the title of its sibling with the additional 'Graphic for' at the start of the title
 <hr />
 <textarea id="parentArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
@@ -49,7 +49,7 @@ Set the block title to the title of its child component and set all graphic titl
 <button id="updateButton">Update</button>
 
 
-<h1>Article Assessment Namer</h1>
+<h1>Assign Article Assessment IDs</h1>
 Quickly set all of the assessment ids to the names of a the first child block it finds.
 <hr />
 <textarea id="parentAssementArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
