--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<link
+  href="https://unpkg.com/sanitize.css"
+  rel="stylesheet"
+/>
+
 <h1>Google Docs to Adapt</h1>
 Download a Google Docs file as an HTML and insert it below. It will convert every H2 with the accompanying. Paragraph text below into blocks and respective child components.
 <hr />
@@ -54,4 +59,10 @@ Quickly set all of the assessment ids to the names of a the first child block it
 <hr />
 <textarea id="parentAssementArea" rows="10" cols="50" placeholder="Insert parent object here"></textarea>
 <textarea id="childBlockArea" rows="10" cols="50" placeholder="Insert array of child objects here"></textarea>
+<button id="updateArticleButton">Update</button>
+
+<h1>Quick image adder</h1>
+<hr />
+<textarea id="componentsTextarea" rows="10" cols="50" placeholder="Insert components.json object here"></textarea>
+<textarea id="assetsTextarea" rows="10" cols="50" placeholder="Insert assets.json here"></textarea>
 <button id="updateArticleButton">Update</button>
