--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ Quickly set all of the assessment ids to the names of a the first child block it
 <textarea id="childBlockArea" rows="10" cols="50" placeholder="Insert array of child objects here"></textarea>
 <button id="updateArticleButton">Update</button>
 
-<h1>Quick image adder</h1>
+<!-- <h1>Quick image adder</h1>
 <hr />
 <textarea id="componentsTextarea" rows="10" cols="50" placeholder="Insert components.json object here"></textarea>
 <textarea id="assetsTextarea" rows="10" cols="50" placeholder="Insert assets.json here"></textarea>
-<button id="updateArticleButton">Update</button>
+<button id="updateArticleButton">Update</button> -->
