--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   rel="stylesheet"
 />
 
+<h1>Text to JSON Converter</h1>
+<textarea id="inputText" rows="10" cols="50"></textarea>
+<br/>
+<button id="convertButton">Convert</button>
+<br/>
+<h2>Output:</h2>
+<pre id="output"></pre>
+
+
 <h1>Google Docs to Adapt</h1>
 Download a Google Docs file as an HTML and insert it below. It will convert every H2 with the accompanying. Paragraph text below into blocks and respective child components.
 <hr />
