--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   rel="stylesheet"
 />
 
+<textarea id="genText" rows="10" cols="50"></textarea>
+<button id="genBtn"> Generate </button>
+
 <h1>Text to JSON Converter</h1>
 <textarea id="inputText" rows="10" cols="50"></textarea>
 <br/>
